<resources>
    <string name="app_name">AndroidChat</string>
    <string name="loginEd_username">Username</string>
    <string name="loginEd_password">Password</string>
    <string name="login_loginBtn">Login</string>
    <string name="from_login_to_regi">Not registered? click the icon to register</string>
    <string name="login">Login</string>
    <string name="register_displayName">Display Name</string>
    <string name="register_btnRegister">Register</string>
    <string name="click_here">click here</string>
    <string name="register">Register</string>
    <string name="title_activity_chat_page">chat_page</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="save_new_friend">Save</string>
    <string name="from_regi_to_login">Already registered? click the icon to login</string>
    <string name="add_friend_username">Username</string>
    <string name="BaseUrl">https://10.0.2.2:7176/api/</string>
</resources>